base/k8up/networkpolicies/k8up-cluster-resources-backup.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8up-cluster-resources-backup
  namespace: k8up
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.k8up: backup-enabled
      io.cilium.k8s.policy.serviceaccount: cluster-resources-backup
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
